--- a/td-django-rest-front/src/pages/PublicationsPage/PublicationsPage.css
+++ b/td-django-rest-front/src/pages/PublicationsPage/PublicationsPage.css
@@ -1,3 +1,14 @@
-h2 {
-    text-align: center;
-}
+button {
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #45a049;
+  }
+  
