--- a/td-django-rest-front/src/pages/ProjectsPage/ProjectsPage.css
+++ b/td-django-rest-front/src/pages/ProjectsPage/ProjectsPage.css
@@ -16,3 +16,8 @@ button {
     background-color: #45a049;
   }
   
+  button {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
